<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_settings">Настройки</string>
    <string name="titlr_media">Медиатека</string>
    <string name="title_search">Поиск</string>
    <string name="setings_theme">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_offer">Пользовательское соглашение</string>
    <string name="practicum_android_course_url">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="offer_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="share_message">Посмотрите курс по Android-разработке в Практикуме: %s</string>

    <string name="support_email">dernov333@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_empty_message">Ничего не нашлось</string>
    <string name="search_error_message">Проблемы со связью</string>
    <string name="search_error_details">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_button_retry">Обновить</string>


</resources>