<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity"
    android:background="@color/surface"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iwBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_back_48"
            app:tint="@color/icon_nav" />

        <TextView
            style="@style/TextAppearance.App.ScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:text="@string/title_search" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        app:cardCornerRadius="@dimen/corner_radius_medium"
        app:cardElevation="@dimen/card_elevation_small"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/searchContainer"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#E6E8EB"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_large"
            android:paddingVertical="@dimen/spacing_medium">

            <ImageView
                android:id="@+id/ivSearchIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_16"
                app:tint="@color/search_tint" />

            <EditText
                android:id="@+id/etSearch"
                style="@style/Widget.App.EditText.Search" />

            <ImageView
                android:id="@+id/ivClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_16"
                android:visibility="gone"
                app:tint="@color/search_tint" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Контейнер контента: список либо плейсхолдеры -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrackList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Плейсхолдер: Ничего не нашлось -->
        <LinearLayout
            android:id="@+id/layoutPlaceholderEmpty"
            style="@style/Widget.App.PlaceholderContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"


            >

            <ImageView
                android:id="@+id/ivNoResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholder_noresults"/>


            <TextView
                style="@style/TextAppearance.App.PlaceholderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_empty_message" />
        </LinearLayout>

        <!-- Плейсхолдер: проблемы со связью -->
        <LinearLayout
            tools:visibility="visible"
            android:id="@+id/layoutPlaceholderError"
            style="@style/Widget.App.PlaceholderContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivInternetError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholder_nointernet" />


            <TextView
                style="@style/TextAppearance.App.PlaceholderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_error_message"
                android:layout_marginTop="@dimen/spacing_large"
                />

            <TextView
                style="@style/TextAppearance.App.PlaceholderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/search_error_details"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRetry"
                style="@style/Widget.App.PlaceholderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/search_button_retry" />

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>